Conexao estabelecida e dados disponiveis

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Clima Facil</string>
+    <string name="title_activity_localizacao">LocalizacaoActivity</string>
+    <string name="title_activity_maps_current_place">MapsActivityCurrentPlace</string>
 </resources>
